Adição do swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/petshop?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
