--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/petshop?&useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.url=jdbc:mysql://localhost:3306/petshop?connectionTimeZone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123
 
 
 
