--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/petshop?connectionTimeZone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=123
-
+#spring.datasource.password=root
 
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
